Proyecto1_Compi2_py/ServidorWeb/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> inicio
Rule 2     inicio -> sentencias
Rule 3     sentencias -> sentencias sentencia
Rule 4     sentencias -> sentencia
Rule 5     sentencia -> usar
Rule 6     sentencia -> crear
Rule 7     sentencia -> imprimir
Rule 8     sentencia -> insertar
Rule 9     sentencia -> actualizar
Rule 10    sentencia -> borrar
Rule 11    sentencia -> seleccionar
Rule 12    sentencia -> otorgar
Rule 13    sentencia -> denegar
Rule 14    sentencia -> back
Rule 15    sentencia -> restaurar
Rule 16    sentencia -> alterar
Rule 17    sentencia -> eliminar
Rule 18    sentencia -> declarar
Rule 19    sentencia -> contar
Rule 20    sentencia -> procedimiento
Rule 21    usar -> R_USAR ID PUNTO_COMA
Rule 22    crear -> R_CREAR opcionescrear
Rule 23    opcionescrear -> crearbase
Rule 24    opcionescrear -> creartabla
Rule 25    opcionescrear -> crearobjeto
Rule 26    opcionescrear -> crearpro
Rule 27    opcionescrear -> crearfun
Rule 28    opcionescrear -> crearusuario
Rule 29    crearbase -> R_BASE ID PUNTO_COMA
Rule 30    creartabla -> R_TABLA ID PAR_IZ campostabla PAR_DER PUNTO_COMA
Rule 31    campostabla -> campostabla COMA campotabla
Rule 32    campostabla -> campotabla
Rule 33    campotabla -> tipodato ID complemento
Rule 34    campotabla -> tipodato ID
Rule 35    complemento -> R_NO R_NULO
Rule 36    complemento -> R_NULO
Rule 37    complemento -> R_AUTOINCREMENTABLE
Rule 38    complemento -> R_PK
Rule 39    complemento -> R_FK ID
Rule 40    complemento -> R_UNICO
Rule 41    crearobjeto -> R_OBJETO ID PAR_IZ parametros PAR_DER PUNTO_COMA
Rule 42    crearobjeto -> R_OBJETO ID PAR_IZ PAR_DER PUNTO_COMA
Rule 43    parametros -> parametros COMA parametro
Rule 44    parametros -> parametro
Rule 45    parametro -> tipodato ID
Rule 46    crearpro -> R_PROCEDIMIENTO ID PAR_IZ parametros PAR_DER COR_IZ subsentencias COR_Der
Rule 47    crearpro -> R_PROCEDIMIENTO ID PAR_IZ PAR_DER COR_IZ subsentencias COR_Der
Rule 48    subsentencias -> subsentencias subsentencia
Rule 49    subsentencias -> subsentencia
Rule 50    subsentencia -> asignacion
Rule 51    subsentencia -> if
Rule 52    subsentencia -> switch
Rule 53    subsentencia -> for
Rule 54    subsentencia -> while
Rule 55    subsentencia -> fecha
Rule 56    subsentencia -> fecha_hora
Rule 57    subsentencia -> sentencia
Rule 58    crearfun -> R_FUNCION ID PAR_IZ parametros PAR_DER tipodato COR_IZ sentencias_retorno COR_Der
Rule 59    crearfun -> R_FUNCION ID PAR_IZ PAR_DER tipodato COR_IZ sentencias_retorno COR_Der
Rule 60    sentencias_retorno -> subsentencias retorno
Rule 61    retorno -> R_RETORNO aritmetica PUNTO_COMA
Rule 62    crearusuario -> R_USUARIO ID R_COLOCAR R_PAS I_ASIG expresion PUNTO_COMA
Rule 63    imprimir -> R_IMPRIMIR PAR_IZ expresion PAR_DER PUNTO_COMA
Rule 64    insertar -> R_INSERTAR R_EN R_TABLA ID PAR_IZ tipoins
Rule 65    tipoins -> campos PAR_DER R_VALORES PAR_IZ valor PAR_DER PUNTO_COMA
Rule 66    tipoins -> valor PAR_DER PUNTO_COMA
Rule 67    campos -> campos COMA campo
Rule 68    campos -> campo
Rule 69    campo -> ID
Rule 70    campo -> R_USUARIO
Rule 71    valor -> valor COMA aritmetica
Rule 72    valor -> aritmetica
Rule 73    actualizar -> R_ACTUALIZAR R_TABLA ID PAR_IZ campos PAR_DER R_VALORES PAR_IZ valor PAR_DER condicionar PUNTO_COMA
Rule 74    actualizar -> R_ACTUALIZAR R_TABLA ID PAR_IZ campos PAR_DER R_VALORES PAR_IZ valor PAR_DER PUNTO_COMA
Rule 75    condicionar -> R_DONDE logica
Rule 76    borrar -> R_BORRAR R_EN R_TABLA ID condicionar PUNTO_COMA
Rule 77    seleccionar -> R_SELECCIONAR camposSelect R_DE ID condicionar ordenamiento PUNTO_COMA
Rule 78    seleccionar -> R_SELECCIONAR camposSelect R_DE ID condicionar PUNTO_COMA
Rule 79    seleccionar -> R_SELECCIONAR camposSelect R_DE ID ordenamiento PUNTO_COMA
Rule 80    seleccionar -> R_SELECCIONAR camposSelect R_DE ID PUNTO_COMA
Rule 81    camposSelect -> MULTI
Rule 82    camposSelect -> campos
Rule 83    ordenamiento -> R_ORDENAR ID modoorden
Rule 84    modoorden -> R_ASC
Rule 85    modoorden -> R_DESC
Rule 86    otorgar -> R_OTORGAR R_PERMISOS ID COMA ID PUNTO objeto PUNTO_COMA
Rule 87    objeto -> MULTI
Rule 88    objeto -> ID
Rule 89    denegar -> R_DENEGAR R_PERMISOS ID COMA ID PUNTO objeto PUNTO_COMA
Rule 90    back -> R_BACKUP tipoback ID ID PUNTO_COMA
Rule 91    tipoback -> R_USQLDUMP
Rule 92    tipoback -> R_COMPLETO
Rule 93    restaurar -> R_RESTAURAR tipoback aritmetica PUNTO_COMA
Rule 94    alterar -> R_ALTERAR alterado
Rule 95    alterado -> R_TABLA ID accionalterartabla PUNTO_COMA
Rule 96    alterado -> R_OBJETO ID accionalterarobjeto PUNTO_COMA
Rule 97    alterado -> R_USUARIO ID R_CAMBIAR R_PAS I_ASIG expresion PUNTO_COMA
Rule 98    accionalterartabla -> R_AGREGAR PAR_IZ campostabla PAR_DER
Rule 99    accionalterartabla -> R_QUITAR campos
Rule 100   accionalterarobjeto -> R_AGREGAR PAR_IZ parametros PAR_DER
Rule 101   accionalterarobjeto -> R_QUITAR campos
Rule 102   eliminar -> R_ELIMINAR R_TABLA ID PUNTO_COMA
Rule 103   eliminar -> R_ELIMINAR R_BASE ID PUNTO_COMA
Rule 104   eliminar -> R_ELIMINAR R_OBJETO ID PUNTO_COMA
Rule 105   eliminar -> R_ELIMINAR R_USUARIO ID PUNTO_COMA
Rule 106   declarar -> R_DECLARAR listavar tipodato I_ASIG asigdecl PUNTO_COMA
Rule 107   declarar -> R_DECLARAR listavar tipodato PUNTO_COMA
Rule 108   listavar -> listavar COMA ID
Rule 109   listavar -> ID
Rule 110   asigdecl -> aritmetica PAR_IZ valor PAR_DER
Rule 111   asigdecl -> aritmetica
Rule 112   asignacion -> ID I_ASIG aritmetica PUNTO_COMA
Rule 113   if -> R_SI PAR_IZ logica PAR_DER COR_IZ subsentencias COR_Der sinoelse
Rule 114   if -> R_SI PAR_IZ logica PAR_DER COR_IZ subsentencias COR_Der
Rule 115   sinoelse -> R_SINO COR_IZ subsentencias COR_Der
Rule 116   switch -> R_SELECCIONA PAR_IZ aritmetica PAR_DER COR_IZ casos defecto COR_Der
Rule 117   switch -> R_SELECCIONA PAR_IZ aritmetica PAR_DER COR_IZ casos COR_Der
Rule 118   casos -> casos caso
Rule 119   casos -> caso
Rule 120   caso -> R_CASO expresion DOS_PUNTO sentenciasswitch
Rule 121   sentenciasswitch -> subsentencia sentenciasswitch
Rule 122   sentenciasswitch -> subsentencia
Rule 123   sentenciasswitch -> R_DETENER PUNTO_COMA
Rule 124   defecto -> R_DEFECTO DOS_PUNTO sentenciasswitch
Rule 125   for -> R_PARA PAR_IZ declaracionfor PUNTO_COMA logica PUNTO_COMA operadorfor PAR_DER COR_IZ sentenciasswitch COR_Der
Rule 126   declaracionfor -> R_DECLARAR ID R_INTEGER I_ASIG aritmetica
Rule 127   operadorfor -> INCR
Rule 128   operadorfor -> DECR
Rule 129   while -> R_MIENTRAS PAR_IZ logica PAR_DER COR_IZ sentenciasswitch COR_Der
Rule 130   fecha -> ID I_ASIG R_FECHA PAR_IZ PAR_DER PUNTO_COMA
Rule 131   fecha_hora -> ID I_ASIG R_FECHA_HORA PAR_IZ PAR_DER PUNTO_COMA
Rule 132   contar -> R_CONTAR PAR_IZ MENOR MENOR seleccionar MAYOR MAYOR PAR_DER PUNTO_COMA
Rule 133   tipodato -> R_TEXT
Rule 134   tipodato -> R_INTEGER
Rule 135   tipodato -> R_DOUBLE
Rule 136   tipodato -> R_BOOL
Rule 137   tipodato -> R_DATE
Rule 138   tipodato -> R_DATETIME
Rule 139   logica -> logor
Rule 140   logor -> logand OR logand
Rule 141   logor -> logand
Rule 142   logand -> relacional AND logica
Rule 143   logand -> NOT relacional
Rule 144   logand -> relacional
Rule 145   logand -> PAR_IZ logica PAR_DER
Rule 146   relacional -> subrelacional relacionalprima
Rule 147   relacional -> subrelacional
Rule 148   relacionalprima -> IGUAL subrelacional relacionalprima
Rule 149   relacionalprima -> IGUAL subrelacional
Rule 150   relacionalprima -> DISTINTO subrelacional relacionalprima
Rule 151   relacionalprima -> DISTINTO subrelacional
Rule 152   relacionalprima -> MENOR subrelacional relacionalprima
Rule 153   relacionalprima -> MENOR subrelacional
Rule 154   relacionalprima -> MAYOR subrelacional relacionalprima
Rule 155   relacionalprima -> MAYOR subrelacional
Rule 156   relacionalprima -> MENOR_IGUAL subrelacional relacionalprima
Rule 157   relacionalprima -> MENOR_IGUAL subrelacional
Rule 158   relacionalprima -> MAYOR_IGUAL subrelacional relacionalprima
Rule 159   relacionalprima -> MAYOR_IGUAL subrelacional
Rule 160   subrelacional -> aritmetica
Rule 161   subrelacional -> PAR_IZ relacional PAR_DER
Rule 162   aritmetica -> multidiv SUMA aritmetica
Rule 163   aritmetica -> multidiv RESTA aritmetica
Rule 164   aritmetica -> multidiv
Rule 165   multidiv -> potenciar MULTI multidiv
Rule 166   multidiv -> potenciar DIV multidiv
Rule 167   multidiv -> potenciar
Rule 168   potenciar -> unario POW potenciar
Rule 169   potenciar -> unario
Rule 170   unario -> RESTA expresion
Rule 171   unario -> expresion
Rule 172   unario -> PAR_IZ aritmetica PAR_DER
Rule 173   expresion -> ID
Rule 174   expresion -> ENTERO
Rule 175   expresion -> DECIMAL
Rule 176   expresion -> CADENA
Rule 177   expresion -> FECHA
Rule 178   expresion -> FECHA_HORA
Rule 179   expresion -> BOOLEAN
Rule 180   expresion -> R_USUARIO
Rule 181   expresion -> R_PAS
Rule 182   procedimiento -> ID PAR_IZ parametrosejec PAR_DER PUNTO_COMA
Rule 183   procedimiento -> ID PAR_IZ PAR_DER PUNTO_COMA
Rule 184   parametrosejec -> aritmetica COMA parametrosejec
Rule 185   parametrosejec -> aritmetica

Terminals, with rules where they appear

AND                  : 142
BOOLEAN              : 179
CADENA               : 176
COMA                 : 31 43 67 71 86 89 108 184
COR_Der              : 46 47 58 59 113 114 115 116 117 125 129
COR_IZ               : 46 47 58 59 113 114 115 116 117 125 129
DECIMAL              : 175
DECR                 : 128
DISTINTO             : 150 151
DIV                  : 166
DOS_PUNTO            : 120 124
ENTERO               : 174
FECHA                : 177
FECHA_HORA           : 178
ID                   : 21 29 30 33 34 39 41 42 45 46 47 58 59 62 64 69 73 74 76 77 78 79 80 83 86 86 88 89 89 90 90 95 96 97 102 103 104 105 108 109 112 126 130 131 173 182 183
IGUAL                : 148 149
INCR                 : 127
I_ASIG               : 62 97 106 112 126 130 131
MAYOR                : 132 132 154 155
MAYOR_IGUAL          : 158 159
MENOR                : 132 132 152 153
MENOR_IGUAL          : 156 157
MULTI                : 81 87 165
NOT                  : 143
OR                   : 140
PAR_DER              : 30 41 42 46 47 58 59 63 65 65 66 73 73 74 74 98 100 110 113 114 116 117 125 129 130 131 132 145 161 172 182 183
PAR_IZ               : 30 41 42 46 47 58 59 63 64 65 73 73 74 74 98 100 110 113 114 116 117 125 129 130 131 132 145 161 172 182 183
POW                  : 168
PUNTO                : 86 89
PUNTO_COMA           : 21 29 30 41 42 61 62 63 65 66 73 74 76 77 78 79 80 86 89 90 93 95 96 97 102 103 104 105 106 107 112 123 125 125 130 131 132 182 183
RESTA                : 163 170
R_ACTUALIZAR         : 73 74
R_AGREGAR            : 98 100
R_ALTERAR            : 94
R_ASC                : 84
R_AUTOINCREMENTABLE  : 37
R_BACKUP             : 90
R_BASE               : 29 103
R_BOOL               : 136
R_BORRAR             : 76
R_CAMBIAR            : 97
R_CASO               : 120
R_COLOCAR            : 62
R_COMPLETO           : 92
R_CONTAR             : 132
R_CREAR              : 22
R_DATE               : 137
R_DATETIME           : 138
R_DE                 : 77 78 79 80
R_DECLARAR           : 106 107 126
R_DEFECTO            : 124
R_DENEGAR            : 89
R_DESC               : 85
R_DETENER            : 123
R_DONDE              : 75
R_DOUBLE             : 135
R_ELIMINAR           : 102 103 104 105
R_EN                 : 64 76
R_FECHA              : 130
R_FECHA_HORA         : 131
R_FK                 : 39
R_FUNCION            : 58 59
R_IMPRIMIR           : 63
R_INSERTAR           : 64
R_INTEGER            : 126 134
R_MIENTRAS           : 129
R_NO                 : 35
R_NULO               : 35 36
R_OBJETO             : 41 42 96 104
R_ORDENAR            : 83
R_OTORGAR            : 86
R_PARA               : 125
R_PAS                : 62 97 181
R_PERMISOS           : 86 89
R_PK                 : 38
R_PROCEDIMIENTO      : 46 47
R_QUITAR             : 99 101
R_RESTAURAR          : 93
R_RETORNO            : 61
R_SELECCIONA         : 116 117
R_SELECCIONAR        : 77 78 79 80
R_SI                 : 113 114
R_SINO               : 115
R_TABLA              : 30 64 73 74 76 95 102
R_TEXT               : 133
R_UNICO              : 40
R_USAR               : 21
R_USQLDUMP           : 91
R_USUARIO            : 62 70 97 105 180
R_VALORES            : 65 73 74
SUMA                 : 162
error                : 

Nonterminals, with rules where they appear

accionalterarobjeto  : 96
accionalterartabla   : 95
actualizar           : 9
alterado             : 94
alterar              : 16
aritmetica           : 61 71 72 93 110 111 112 116 117 126 160 162 163 172 184 185
asigdecl             : 106
asignacion           : 50
back                 : 14
borrar               : 10
campo                : 67 68
campos               : 65 67 73 74 82 99 101
camposSelect         : 77 78 79 80
campostabla          : 30 31 98
campotabla           : 31 32
caso                 : 118 119
casos                : 116 117 118
complemento          : 33
condicionar          : 73 76 77 78
contar               : 19
crear                : 6
crearbase            : 23
crearfun             : 27
crearobjeto          : 25
crearpro             : 26
creartabla           : 24
crearusuario         : 28
declaracionfor       : 125
declarar             : 18
defecto              : 116
denegar              : 13
eliminar             : 17
expresion            : 62 63 97 120 170 171
fecha                : 55
fecha_hora           : 56
for                  : 53
if                   : 51
imprimir             : 7
inicio               : 1
insertar             : 8
listavar             : 106 107 108
logand               : 140 140 141
logica               : 75 113 114 125 129 142 145
logor                : 139
modoorden            : 83
multidiv             : 162 163 164 165 166
objeto               : 86 89
opcionescrear        : 22
operadorfor          : 125
ordenamiento         : 77 79
otorgar              : 12
parametro            : 43 44
parametros           : 41 43 46 58 100
parametrosejec       : 182 184
potenciar            : 165 166 167 168
procedimiento        : 20
programa             : 0
relacional           : 142 143 144 161
relacionalprima      : 146 148 150 152 154 156 158
restaurar            : 15
retorno              : 60
seleccionar          : 11 132
sentencia            : 3 4 57
sentencias           : 2 3
sentencias_retorno   : 58 59
sentenciasswitch     : 120 121 124 125 129
sinoelse             : 113
subrelacional        : 146 147 148 149 150 151 152 153 154 155 156 157 158 159
subsentencia         : 48 49 121 122
subsentencias        : 46 47 48 60 113 114 115
switch               : 52
tipoback             : 90 93
tipodato             : 33 34 45 58 59 106 107
tipoins              : 64
unario               : 168 169
usar                 : 5
valor                : 65 66 71 73 74 110
while                : 54

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . inicio
    (2) inicio -> . sentencias
    (3) sentencias -> . sentencias sentencia
    (4) sentencias -> . sentencia
    (5) sentencia -> . usar
    (6) sentencia -> . crear
    (7) sentencia -> . imprimir
    (8) sentencia -> . insertar
    (9) sentencia -> . actualizar
    (10) sentencia -> . borrar
    (11) sentencia -> . seleccionar
    (12) sentencia -> . otorgar
    (13) sentencia -> . denegar
    (14) sentencia -> . back
    (15) sentencia -> . restaurar
    (16) sentencia -> . alterar
    (17) sentencia -> . eliminar
    (18) sentencia -> . declarar
    (19) sentencia -> . contar
    (20) sentencia -> . procedimiento
    (21) usar -> . R_USAR ID PUNTO_COMA
    (22) crear -> . R_CREAR opcionescrear
    (63) imprimir -> . R_IMPRIMIR PAR_IZ expresion PAR_DER PUNTO_COMA
    (64) insertar -> . R_INSERTAR R_EN R_TABLA ID PAR_IZ tipoins
    (73) actualizar -> . R_ACTUALIZAR R_TABLA ID PAR_IZ campos PAR_DER R_VALORES PAR_IZ valor PAR_DER condicionar PUNTO_COMA
    (74) actualizar -> . R_ACTUALIZAR R_TABLA ID PAR_IZ campos PAR_DER R_VALORES PAR_IZ valor PAR_DER PUNTO_COMA
    (76) borrar -> . R_BORRAR R_EN R_TABLA ID condicionar PUNTO_COMA
    (77) seleccionar -> . R_SELECCIONAR camposSelect R_DE ID condicionar ordenamiento PUNTO_COMA
    (78) seleccionar -> . R_SELECCIONAR camposSelect R_DE ID condicionar PUNTO_COMA
    (79) seleccionar -> . R_SELECCIONAR camposSelect R_DE ID ordenamiento PUNTO_COMA
    (80) seleccionar -> . R_SELECCIONAR camposSelect R_DE ID PUNTO_COMA
    (86) otorgar -> . R_OTORGAR R_PERMISOS ID COMA ID PUNTO objeto PUNTO_COMA
    (89) denegar -> . R_DENEGAR R_PERMISOS ID COMA ID PUNTO objeto PUNTO_COMA
    (90) back -> . R_BACKUP tipoback ID ID PUNTO_COMA
    (93) restaurar -> . R_RESTAURAR tipoback aritmetica PUNTO_COMA
    (94) alterar -> . R_ALTERAR alterado
    (102) eliminar -> . R_ELIMINAR R_TABLA ID PUNTO_COMA
    (103) eliminar -> . R_ELIMINAR R_BASE ID PUNTO_COMA
    (104) eliminar -> . R_ELIMINAR R_OBJETO ID PUNTO_COMA
    (105) eliminar -> . R_ELIMINAR R_USUARIO ID PUNTO_COMA
    (106) declarar -> . R_DECLARAR listavar tipodato I_ASIG asigdecl PUNTO_COMA
    (107) declarar -> . R_DECLARAR listavar tipodato PUNTO_COMA
    (132) contar -> . R_CONTAR PAR_IZ MENOR MENOR seleccionar MAYOR MAYOR PAR_DER PUNTO_COMA
    (182) procedimiento -> . ID PAR_IZ parametrosejec PAR_DER PUNTO_COMA
    (183) procedimiento -> . ID PAR_IZ PAR_DER PUNTO_COMA

    R_USAR          shift and go to state 4
    R_CREAR         shift and go to state 36
    R_IMPRIMIR      shift and go to state 34
    R_INSERTAR      shift and go to state 3
    R_ACTUALIZAR    shift and go to state 17
    R_BORRAR        shift and go to state 15
    R_SELECCIONAR   shift and go to state 21
    R_OTORGAR       shift and go to state 7
    R_DENEGAR       shift and go to state 32
    R_BACKUP        shift and go to state 35
    R_RESTAURAR     shift and go to state 13
    R_ALTERAR       shift and go to state 12
    R_ELIMINAR      shift and go to state 10
    R_DECLARAR      shift and go to state 28
    R_CONTAR        shift and go to state 27
    ID              shift and go to state 26

    crear                          shift and go to state 1
    sentencias                     shift and go to state 2
    otorgar                        shift and go to state 5
    back                           shift and go to state 6
    actualizar                     shift and go to state 8
    procedimiento                  shift and go to state 9
    contar                         shift and go to state 11
    sentencia                      shift and go to state 14
    declarar                       shift and go to state 16
    inicio                         shift and go to state 18
    eliminar                       shift and go to state 19
    insertar                       shift and go to state 20
    imprimir                       shift and go to state 22
    usar                           shift and go to state 23
    borrar                         shift and go to state 24
    denegar                        shift and go to state 25
    seleccionar                    shift and go to state 29
    restaurar                      shift and go to state 30
    alterar                        shift and go to state 31
    programa                       shift and go to state 33

state 1

    (6) sentencia -> crear .

    R_DETENER       reduce using rule 6 (sentencia -> crear .)
    ID              reduce using rule 6 (sentencia -> crear .)
    R_SI            reduce using rule 6 (sentencia -> crear .)
    R_SELECCIONA    reduce using rule 6 (sentencia -> crear .)
    R_PARA          reduce using rule 6 (sentencia -> crear .)
    R_MIENTRAS      reduce using rule 6 (sentencia -> crear .)
    R_USAR          reduce using rule 6 (sentencia -> crear .)
    R_CREAR         reduce using rule 6 (sentencia -> crear .)
    R_IMPRIMIR      reduce using rule 6 (sentencia -> crear .)
    R_INSERTAR      reduce using rule 6 (sentencia -> crear .)
    R_ACTUALIZAR    reduce using rule 6 (sentencia -> crear .)
    R_BORRAR        reduce using rule 6 (sentencia -> crear .)
    R_SELECCIONAR   reduce using rule 6 (sentencia -> crear .)
    R_OTORGAR       reduce using rule 6 (sentencia -> crear .)
    R_DENEGAR       reduce using rule 6 (sentencia -> crear .)
    R_BACKUP        reduce using rule 6 (sentencia -> crear .)
    R_RESTAURAR     reduce using rule 6 (sentencia -> crear .)
    R_ALTERAR       reduce using rule 6 (sentencia -> crear .)
    R_ELIMINAR      reduce using rule 6 (sentencia -> crear .)
    R_DECLARAR      reduce using rule 6 (sentencia -> crear .)
    R_CONTAR        reduce using rule 6 (sentencia -> crear .)
    COR_Der         reduce using rule 6 (sentencia -> crear .)
    R_RETORNO       reduce using rule 6 (sentencia -> crear .)
    $end            reduce using rule 6 (sentencia -> crear .)
    R_DEFECTO       reduce using rule 6 (sentencia -> crear .)
    R_CASO          reduce using rule 6 (sentencia -> crear .)


state 2

    (2) inicio -> sentencias .
    (3) sentencias -> sentencias . sentencia
    (5) sentencia -> . usar
    (6) sentencia -> . crear
    (7) sentencia -> . imprimir
    (8) sentencia -> . insertar
    (9) sentencia -> . actualizar
    (10) sentencia -> . borrar
    (11) sentencia -> . seleccionar
    (12) sentencia -> . otorgar
    (13) sentencia -> . denegar
    (14) sentencia -> . back
    (15) sentencia -> . restaurar
    (16) sentencia -> . alterar
    (17) sentencia -> . eliminar
    (18) sentencia -> . declarar
    (19) sentencia -> . contar
    (20) sentencia -> . procedimiento
    (21) usar -> . R_USAR ID PUNTO_COMA
    (22) crear -> . R_CREAR opcionescrear
    (63) imprimir -> . R_IMPRIMIR PAR_IZ expresion PAR_DER PUNTO_COMA
    (64) insertar -> . R_INSERTAR R_EN R_TABLA ID PAR_IZ tipoins
    (73) actualizar -> . R_ACTUALIZAR R_TABLA ID PAR_IZ campos PAR_DER R_VALORES PAR_IZ valor PAR_DER condicionar PUNTO_COMA
    (74) actualizar -> . R_ACTUALIZAR R_TABLA ID PAR_IZ campos PAR_DER R_VALORES PAR_IZ valor PAR_DER PUNTO_COMA
    (76) borrar -> . R_BORRAR R_EN R_TABLA ID condicionar PUNTO_COMA
    (77) seleccionar -> . R_SELECCIONAR camposSelect R_DE ID condicionar ordenamiento PUNTO_COMA
    (78) seleccionar -> . R_SELECCIONAR camposSelect R_DE ID condicionar PUNTO_COMA
    (79) seleccionar -> . R_SELECCIONAR camposSelect R_DE ID ordenamiento PUNTO_COMA
    (80) seleccionar -> . R_SELECCIONAR camposSelect R_DE ID PUNTO_COMA
    (86) otorgar -> . R_OTORGAR R_PERMISOS ID COMA ID PUNTO objeto PUNTO_COMA
    (89) denegar -> . R_DENEGAR R_PERMISOS ID COMA ID PUNTO objeto PUNTO_COMA
    (90) back -> . R_BACKUP tipoback ID ID PUNTO_COMA
    (93) restaurar -> . R_RESTAURAR tipoback aritmetica PUNTO_COMA
    (94) alterar -> . R_ALTERAR alterado
    (102) eliminar -> . R_ELIMINAR R_TABLA ID PUNTO_COMA
    (103) eliminar -> . R_ELIMINAR R_BASE ID PUNTO_COMA
    (104) eliminar -> . R_ELIMINAR R_OBJETO ID PUNTO_COMA
    (105) eliminar -> . R_ELIMINAR R_USUARIO ID PUNTO_COMA
    (106) declarar -> . R_DECLARAR listavar tipodato I_ASIG asigdecl PUNTO_COMA
    (107) declarar -> . R_DECLARAR listavar tipodato PUNTO_COMA
    (132) contar -> . R_CONTAR PAR_IZ MENOR MENOR seleccionar MAYOR MAYOR PAR_DER PUNTO_COMA
    (182) procedimiento -> . ID PAR_IZ parametrosejec PAR_DER PUNTO_COMA
    (183) procedimiento -> . ID PAR_IZ PAR_DER PUNTO_COMA

    $end            reduce using rule 2 (inicio -> sentencias .)
    R_USAR          shift and go to state 4
    R_CREAR         shift and go to state 36
    R_IMPRIMIR      shift and go to state 34
    R_INSERTAR      shift and go to state 3
    R_ACTUALIZAR    shift and go to state 17
    R_BORRAR        shift and go to state 15
    R_SELECCIONAR   shift and go to state 21
    R_OTORGAR       shift and go to state 7
    R_DENEGAR       shift and go to state 32
    R_BACKUP        shift and go to state 35
    R_RESTAURAR     shift and go to state 13
    R_ALTERAR       shift and go to state 12
    R_ELIMINAR      shift and go to state 10
    R_DECLARAR      shift and go to state 28
    R_CONTAR        shift and go to state 27
    ID              shift and go to state 26

    crear                          shift and go to state 1
    imprimir                       shift and go to state 22
    back                           shift and go to state 6
    actualizar                     shift and go to state 8
    procedimiento                  shift and go to state 9
    contar                         shift and go to state 11
    sentencia                      shift and go to state 37
    declarar                       shift and go to state 16
    insertar                       shift and go to state 20
    otorgar                        shift and go to state 5
    usar                           shift and go to state 23
    borrar                         shift and go to state 24
    denegar                        shift and go to state 25
    seleccionar                    shift and go to state 29
    restaurar                      shift and go to state 30
    alterar                        shift and go to state 31
    eliminar                       shift and go to state 19

state 3

    (64) insertar -> R_INSERTAR . R_EN R_TABLA ID PAR_IZ tipoins

    R_EN            shift and go to state 38


state 4

    (21) usar -> R_USAR . ID PUNTO_COMA

    ID              shift and go to state 39


state 5

    (12) sentencia -> otorgar .

    R_DETENER       reduce using rule 12 (sentencia -> otorgar .)
    ID              reduce using rule 12 (sentencia -> otorgar .)
    R_SI            reduce using rule 12 (sentencia -> otorgar .)
    R_SELECCIONA    reduce using rule 12 (sentencia -> otorgar .)
    R_PARA          reduce using rule 12 (sentencia -> otorgar .)
    R_MIENTRAS      reduce using rule 12 (sentencia -> otorgar .)
    R_USAR          reduce using rule 12 (sentencia -> otorgar .)
    R_CREAR         reduce using rule 12 (sentencia -> otorgar .)
    R_IMPRIMIR      reduce using rule 12 (sentencia -> otorgar .)
    R_INSERTAR      reduce using rule 12 (sentencia -> otorgar .)
    R_ACTUALIZAR    reduce using rule 12 (sentencia -> otorgar .)
    R_BORRAR        reduce using rule 12 (sentencia -> otorgar .)
    R_SELECCIONAR   reduce using rule 12 (sentencia -> otorgar .)
    R_OTORGAR       reduce using rule 12 (sentencia -> otorgar .)
    R_DENEGAR       reduce using rule 12 (sentencia -> otorgar .)
    R_BACKUP        reduce using rule 12 (sentencia -> otorgar .)
    R_RESTAURAR     reduce using rule 12 (sentencia -> otorgar .)
    R_ALTERAR       reduce using rule 12 (sentencia -> otorgar .)
    R_ELIMINAR      reduce using rule 12 (sentencia -> otorgar .)
    R_DECLARAR      reduce using rule 12 (sentencia -> otorgar .)
    R_CONTAR        reduce using rule 12 (sentencia -> otorgar .)
    COR_Der         reduce using rule 12 (sentencia -> otorgar .)
    R_RETORNO       reduce using rule 12 (sentencia -> otorgar .)
    $end            reduce using rule 12 (sentencia -> otorgar .)
    R_DEFECTO       reduce using rule 12 (sentencia -> otorgar .)
    R_CASO          reduce using rule 12 (sentencia -> otorgar .)


state 6

    (14) sentencia -> back .

    R_DETENER       reduce using rule 14 (sentencia -> back .)
    ID              reduce using rule 14 (sentencia -> back .)
    R_SI            reduce using rule 14 (sentencia -> back .)
    R_SELECCIONA    reduce using rule 14 (sentencia -> back .)
    R_PARA          reduce using rule 14 (sentencia -> back .)
    R_MIENTRAS      reduce using rule 14 (sentencia -> back .)
    R_USAR          reduce using rule 14 (sentencia -> back .)
    R_CREAR         reduce using rule 14 (sentencia -> back .)
    R_IMPRIMIR      reduce using rule 14 (sentencia -> back .)
    R_INSERTAR      reduce using rule 14 (sentencia -> back .)
    R_ACTUALIZAR    reduce using rule 14 (sentencia -> back .)
    R_BORRAR        reduce using rule 14 (sentencia -> back .)
    R_SELECCIONAR   reduce using rule 14 (sentencia -> back .)
    R_OTORGAR       reduce using rule 14 (sentencia -> back .)
    R_DENEGAR       reduce using rule 14 (sentencia -> back .)
    R_BACKUP        reduce using rule 14 (sentencia -> back .)
    R_RESTAURAR     reduce using rule 14 (sentencia -> back .)
    R_ALTERAR       reduce using rule 14 (sentencia -> back .)
    R_ELIMINAR      reduce using rule 14 (sentencia -> back .)
    R_DECLARAR      reduce using rule 14 (sentencia -> back .)
    R_CONTAR        reduce using rule 14 (sentencia -> back .)
    COR_Der         reduce using rule 14 (sentencia -> back .)
    R_RETORNO       reduce using rule 14 (sentencia -> back .)
    $end            reduce using rule 14 (sentencia -> back .)
    R_DEFECTO       reduce using rule 14 (sentencia -> back .)
    R_CASO          reduce using rule 14 (sentencia -> back .)


state 7

    (86) otorgar -> R_OTORGAR . R_PERMISOS ID COMA ID PUNTO objeto PUNTO_COMA

    R_PERMISOS      shift and go to state 40


state 8

    (9) sentencia -> actualizar .
